--- a/php/css/main.css
+++ b/php/css/main.css
@@ -1,5 +1,5 @@
 @import "base.css"; /* 이렇게 해놓으면 index.php에서 알아서 base.css도 불러줌 */
-
+body{background-color:#e7e7e7;}
 .wrap{width:100%; height:100%;  max-width:1200px; margin:0 auto; position:relative;}
 .top_menu{background-color:#333; color:#fff;}
 .top_menu > ul{float:right; margin-right:1em;}
@@ -10,13 +10,14 @@
 .top > .bars{float:right; margin-right:1em;}
 
 .navs{margin-top:2rem; border-bottom:1px solid #999; }
-.navs > li{float:left; width:24%;  border:1px solid #999; padding:1rem; text-align:center; border-bottom:1px solid #fff;}
+.navs > li{float:left; width:20%;  border:1px solid #999; padding:1rem; text-align:center; border-bottom:1px solid #fff;}
 .navs > li:nth-child(1){margin:0 1% -1px 0%;}
 .navs > li:nth-child(2){margin:0 0.75% -1px 0.3%;}
 .navs > li:nth-child(3){margin:0 0.25% -1px 0.7%;}
 .navs > li:nth-child(4){margin:0 0% -1px 1%;}
+.navs > li:nth-child(5){margin:0 0% -1px 1%;}
 
-.copyright{width:100%; background-color:#333; color:#fff; text-align:Center; padding:0.5em; position:absolute; bottom:0;}
+.copyright{width:100%; background-color:#333; color:#fff; text-align:Center; padding:0.5em; position:fixed; bottom:0; left:0;}
 
 .mbody{border-left:1px solid #999; border-bottom:1px solid #999; border-right:1px solid #999; min-height:calc(100% - 17rem);
-padding:2rem;}
+padding:2rem; background-color:#fff;}
